Fixes images being too big in search result if image editor isn't available.

--- a/tool-ui/src/main/webapp/style/tool.less
+++ b/tool-ui/src/main/webapp/style/tool.less
@@ -384,6 +384,11 @@
         float: left;
         height: 100px;
         margin: 0 5px 5px 0;
+
+        img {
+            max-height: 100%;
+            max-width: 100%;
+        }
     }
 }
 
